# pdf_parser-o2rus-

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
modules/: app.py  pdf_parser.py  text_parser.py
modules/database/: models.py  service.py
utils/: constants.py  exceptions.py  file_utils.py  patterns.py
